# openmm_agbnp3_plugin

./: .gitmodules  CMakeLists.txt  README.md
example/: test_agbnp3.py
openmmapi/include/: AGBNP3Force.h  AGBNP3Kernels.h
openmmapi/include/internal/: AGBNP3ForceImpl.h  windowsExportAGBNP3.h
openmmapi/src/: AGBNP3Force.cpp  AGBNP3ForceImpl.cpp
python/: AGBNP3plugin.i  CMakeLists.txt  setup.py
